[project]
name = "bayes-survival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Johann", email = "bouwer2608@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pymc>=5.0",
    "pytensor>=2.18",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "lifelines>=0.29",
    "arviz==0.18",
    "matplotlib>=3.8",
    "jax[cpu]>=0.4",
    "jaxlib>=0.4",
    "numpyro>=0.15",
    "nutpie>=0.13",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "watermark>=2.4",
]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
